changed div id to a div class "wojak shack"
unecessary to have ID plus I've already removed it from syntax in CSS file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ But it must have the following features:
 </head>
 
 <body>
-  <div id="div">
+  <div class = "wojak shack">
     <img id="image" src="./assets/images/wojak tired at desk.jpeg">
     <h1 id="header">POV: Vibe Coding with AI</h1>
     <p id="text">I've pasted 30 'this will definitely fix it's, I think this time Cursor will get it right (my whole screen is red)</p>
